     Also the NUT daemons should request to double-check against their
     run-time process name (if it can be detected). [issue #2463]

 - various recipe, documentation and source files were revised to address
   respective warnings issued by the new generations of analysis tools.
   [#823, #2437, link:https://github.com/networkupstools/nut-website/issues/52[nut-website issue #52]]

 - revised `nut.exe` (the NUT for Windows wrapper for all-in-one service)
   to be more helpful with command-line use (report that it failed to start
   as a service, have a help message, pass debug verbosity to launched NUT
   programs...) and add a man page for it. [issue #2432, PR #2446]

 - the `PyNUTClient` module should no longer rely on presence of a `telnetlib`
   module in the build or execution environment (deprecated in Python 3.11,
   removed since Python 3.13). [#2183]

 - enabled installation of built single-file PDF and HTML (including man page
   renditions) under the configured `docdir`. It seems previously they were
   only built (if requested) but not installed via `make`, unlike the common
   man pages which are delivered automatically. [#2445]
+
   NOTE: The `html-chunked` documents are currently still not installed.

 - added support to `./configure --with-doc=man=dist-auto` to use distributed
   manual page files if present; only fall back to build them if we can. [#2473]

 - added a `make distcheck-light-man` recipe to require verification that the
   manual page files can be built using the prepared "tarball" archive. [#2473]

 - added a `common/Makefile.am` build product for a new internal library
   `libcommonstr.la` which allows a smaller selection of helper methods
   for tools like `nut-scanner` which do not need the full `libcommon.la`
   nor `libcommonclient.la`. [#2478, #2491]

 - added a `drivers/Makefile.am` build product for a new internal library
   `libserial-nutscan.la` to simplify `tools/nut-scanner/Makefile.am` recipes.
   [#2490]
