@@ -1,0 +1,96 @@
+{
+   <socketcall_sendto>
+   Memcheck:Param
+   socketcall.send(msg)
+   fun:send
+   ...
+}
+{
+   <glibc_freeres>
+   Memcheck:Free
+   fun:free
+   ...
+   fun:__libc_freeres
+   ...
+}
+{
+   <glibc_eh_alloc__see_bug_66339>
+   Memcheck:Leak
+   match-leak-kinds: reachable
+   fun:malloc
+   fun:pool
+   fun:__static_initialization_and_destruction_0
+   fun:_GLOBAL__sub_I_eh_alloc.cc
+   ...
+}
+{
+   <libgcrypt_init>
+   Memcheck:Leak
+   match-leak-kinds: reachable
+   fun:malloc
+   ...
+   fun:_gcry_mpi_init
+   fun:global_init
+   ...
+}
+{
+   <libssl_init>
+   Memcheck:Leak
+   ...
+   fun:CRYPTO_*
+   ...
+}
+{
+   <libssl_init>
+   Memcheck:Leak
+   ...
+   fun:SSL_CTX_*
+   ...
+}
+{
+   <libssl_init>
+   Memcheck:Leak
+   ...
+   fun:OPENSSL_*
+   ...
+}
+{
+   <ltdl_init>
+   Memcheck:Leak
+   fun:*alloc
+   ...
+   fun:_dl_init
+   ...
+}
+{
+   <ltdl_init>
+   Memcheck:Leak
+   fun:*alloc
+   ...
+   fun:_dl_new_object
+   ...
+}
+{
+   <ltdl_init>
+   Memcheck:Leak
+   fun:*alloc
+   ...
+   fun:elf_machine_rela
+   ...
+}
+{
+   <ltdl_init>
+   Memcheck:Leak
+   fun:*alloc
+   ...
+   fun:dl_open_worker
+   ...
+}
+{
+   <ltdl_init>
+   Memcheck:Leak
+   fun:*alloc
+   ...
+   fun:_dlerror_run
+   ...
+}
