@@ -1,0 +1,16 @@
+VALGRIND resources
+==================
+
+Helper script and suppression file to analyze NUT binaries.
+
+Example use-case:
+----
+:; make -ks -j && LD_LIBRARY_PATH=`pwd`/clients/.libs \
+    ./scripts/valgrind/valgrind.sh ./tools/nut-scanner/nut-scanner -DDDDDD -m auto
+----
+
+See also:
+
+* link:https://wiki.wxwidgets.org/Valgrind_Suppression_File_Howto[Valgrind Suppression File How-to]
+  - Notably, add `--gen-suppressions=all --error-limit=no` to `valgrind`
+    program options to generate suppression snippets
